# tema

./: .SRCINFO  .gitignore  PKGBUILD  README.md  init.js  meson.build  package-lock.json  package.json  pywal-templates.sh  tema  tema-git-1.0.0.r29.g14c02fa-1-any.pkg.tar.zst  tema.desktop  tema.desktop.in  tema.install
.github/workflows/: release.yml
data/: com.bjarneo.Tema.desktop.in  li.oever.tema.desktop.in
src/: ColorUtils.js  DialogManager.js  SubprocessUtils.js  TemaTheming.js  ThemeGenerator.js  ThumbnailManager.js  WallpaperManager.js  com.bjarneo.Tema.in  com.bjarneo.Tema.src.gresource.xml  li.oever.tema.in  li.oever.tema.src.gresource.xml  main.js  style.css
src/components/: ThumbnailManager.js
src/services/: TemaTheming.js  ThemeGenerator.js  WallpaperManager.js
src/utils/: ColorUtils.js  DialogManager.js  SubprocessUtils.js
tema/: FETCH_HEAD  config  packed-refs
tema/objects/pack/: pack-efea90c83e3ef37aeedcff4be9663f7815e208b8.idx  pack-efea90c83e3ef37aeedcff4be9663f7815e208b8.pack  pack-efea90c83e3ef37aeedcff4be9663f7815e208b8.rev
templates/: hyprland.conf  mako.ini  vencord.theme.css
